Generate final plots

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -58,13 +58,13 @@
     "[ax.scatter(*mic[:2], label=f'mic{i}, $\\\\theta=${azimuth_deg}$^\\\\circ$') for i, mic in enumerate(mic_positions)]\n",
     "\n",
     "source, mic_positions = get_setup(distance_cm=distance, azimuth_deg=azimuth_deg, ax=ax)\n",
-    "ax.set_title(f\"wall distance $d=${distance}cm and angle $\\\\theta=${azimuth_deg}degrees\")\n",
+    "ax.set_title(f\"wall distance $d=${distance}cm \\n and angle $\\\\theta=${azimuth_deg}degrees\")\n",
     "handles, labels = ax.get_legend_handles_labels()\n",
     "h_mics = {l.split(', $\\\\theta')[0]: h for h, l in zip(handles, labels) if '\\\\theta' in l}\n",
-    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower right\", bbox_to_anchor=[0.3, 0])\n",
+    "l1 = ax.legend(h_mics.values(), h_mics.keys(),loc=\"lower left\", bbox_to_anchor=[0.6, 0])\n",
     "\n",
     "h_other = {l: h for h, l in zip(handles, labels) if not 'mic' in l}\n",
-    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower left\", bbox_to_anchor=[0.3, 0])\n",
+    "ax.legend(h_other.values(), h_other.keys(),loc=\"lower right\", bbox_to_anchor=[0.6, 0])\n",
     "ax.add_artist(l1)\n",
     "ax.set_xlabel(\"x [m]\")\n",
     "ax.set_ylabel(\"y [m]\")\n",
@@ -438,22 +438,22 @@
     "else:\n",
     "    motors_list = [\"all45000\", 0]\n",
     "\n",
-    "for motors in motors_list:\n",
+    "for motors_here in motors_list:\n",
     "    fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "    fig.set_size_inches(10, 5)\n",
     "    calib_function_median, freqs = get_calibration_function_median(\n",
-    "        exp_name, mic_type, snr=snr, ax=axs[0], motors=motors\n",
+    "        exp_name, mic_type, snr=snr, ax=axs[0], motors=motors_here\n",
     "    )\n",
     "    axs[0].legend(loc='lower right')\n",
     "    axs[0].set_title(\"calibration-individual\")\n",
     "\n",
     "    calib_function_median_one, freqs = get_calibration_function_median(\n",
-    "        exp_name, mic_type, ax=axs[1], fit_one_gain=True, snr=snr, motors=motors\n",
+    "        exp_name, mic_type, ax=axs[1], fit_one_gain=True, snr=snr, motors=motors_here\n",
     "    )\n",
     "    axs[1].set_title(\"calibration-global\")\n",
     "    axs[1].set_ylabel('')\n",
     "    axs[1].legend().set_visible(False)\n",
-    "    save_fig(fig, f'{plot_dir}/{exp_name}_calibration_median_{motors}.pdf')"
+    "    save_fig(fig, f'{plot_dir}/{exp_name}_calibration_median_{motors_here}.pdf')"
    ]
   },
   {
@@ -511,7 +511,7 @@
    },
    "outputs": [],
    "source": [
-    "from plotting_tools import plot_df_matrix, save_fig, titles, FIGSIZE\n",
+    "from plotting_tools import plot_df_matrix, save_fig, titles\n",
     "\n",
     "min_freq = 3100 #min(df_freq)\n",
     "max_freq = 5000 #max(df_freq)\n",
@@ -521,11 +521,13 @@
     "\n",
     "fname = f\"{exp_name}_{motors}\"\n",
     "\n",
+    "figsize = 4\n",
+    "\n",
     "for normalization, df in results.groupby(\"normalization\", sort=False):\n",
     "    matrix = df.iloc[0].matrix\n",
     "    n_mics = matrix.shape[0]\n",
     "    fig, axs = plt.subplots(1, n_mics, sharey=True)\n",
-    "    fig.set_size_inches(n_mics*FIGSIZE, FIGSIZE)\n",
+    "    fig.set_size_inches(n_mics*figsize, figsize)\n",
     "    axs[0].set_ylabel('frequency [Hz]')\n",
     "    for i in range(n_mics):\n",
     "        df_exp = df.iloc[0].matrix[i]\n",
@@ -547,7 +549,7 @@
     "    \n",
     "mic_idx = 1\n",
     "fig, axs = plt.subplots(1, len(method_dict), sharey=True)\n",
-    "fig.set_size_inches(len(method_dict)*FIGSIZE, FIGSIZE) \n",
+    "fig.set_size_inches(len(method_dict)*figsize, figsize) \n",
     "axs[0].set_ylabel('frequency [Hz]')\n",
     "for i, (normalization, df) in enumerate(results.groupby(\"normalization\", sort=False)):\n",
     "    matrix = df.iloc[0].matrix\n",
