--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -307,8 +307,8 @@
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG_STEPPER\n",
     "\n",
-    "#distance_nom = 47\n",
-    "distance_nom = 30\n",
+    "distance_nom = 47\n",
+    "#distance_nom = 30\n",
     "stft_list = []\n",
     "freqs_list = []\n",
     "pos_list = []\n",
@@ -433,7 +433,7 @@
     "print(stft_matrix.shape, prob_matrix.shape)\n",
     "\n",
     "\n",
-    "label = f'probability sweep 0'\n",
+    "label = f'sweep 0'\n",
     "for i, (stft, freqs, pos) in enumerate(zip(stft_list, freqs_list, pos_list)):\n",
     "    color = cmap(i / (1.1 * len(stft_list)))  #f\"C{i}\"\n",
     "\n",
@@ -471,7 +471,7 @@
     "                  alpha=0.5)\n",
     "    label = None\n",
     "    \n",
-    "label = f'probability sweep {i}'\n",
+    "label = f'sweep {i}'\n",
     "ax_total.plot(dist * 1e2,\n",
     "              proba, \n",
     "              #eps_normalize(proba, 1e-3),\n",
@@ -510,7 +510,7 @@
     "    #eps_normalize(proba, 1e-3),\n",
     "    color=\"k\",\n",
     "    ls=\"-\",\n",
-    "    label=\"averaged probabilities\",\n",
+    "    label=\"average\",\n",
     ")\n",
     "\n",
     "#### Plot decorations\n",
@@ -527,16 +527,19 @@
     "ax_pos.set_ylabel(\"y [cm]\")\n",
     "ax_pos.axis(\"equal\")\n",
     "ax_pos.grid()\n",
+    "ax_pos.set_title(\"zoom\")\n",
     "\n",
     "ax_total.set_xlabel(\"distance [cm]\")\n",
     "ax_total.set_ylabel(\"probability\")\n",
-    "print(dist_average)\n",
-    "ax_total.axvline(dist_average, ls=\":\", color=\"k\", label=\"average distance\")\n",
+    "ax_total.set_title(\"combined probability\")\n",
+    "ax_total.axvline(dist_average, ls=\":\", color=\"k\", label=\"avg. distance\")\n",
     "ax_total.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "ax_total.grid()\n",
     "\n",
     "save_fig(fig_pos, f\"{fname}_start{start_i}_n{n_sweeps}_{calib}_pos.pdf\")\n",
     "ax_pos.axhline(y=0, color='k')\n",
+    "ax_pos.set_ylim(-3, 53)\n",
+    "ax_pos.set_title(\"positions\")\n",
     "save_fig(fig_pos, f\"{fname}_start{start_i}_n{n_sweeps}_{calib}_pos_wall.pdf\")\n",
     "\n",
     "save_fig(fig_slice, f\"{fname}_start{start_i}_n{n_sweeps}_{calib}_data.pdf\")\n",
