--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -352,10 +352,10 @@
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
     "exp_name = \"2021_07_27_hover\"; \n",
-    "distance = 30\n",
-    "#distance = 50\n",
-    "#calib = \"stepper_nomotors\"\n",
-    "calib = \"hover\"\n",
+    "#distance = 30\n",
+    "distance = 50\n",
+    "calib = \"stepper_nomotors\"\n",
+    "#calib = \"hover\"\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
@@ -364,7 +364,7 @@
     "print(row)\n",
     "\n",
     "label = f\"hover at {distance}\"\n",
-    "mics = [0, 1, 3]\n",
+    "mics = [0, 1, 2]\n",
     "\n",
     "# choose three sweeps to plot\n",
     "start_i = 3\n",
@@ -393,7 +393,6 @@
     "from plotting_tools import save_fig, pcolorfast_custom\n",
     "from matplotlib import cm\n",
     "import scipy\n",
-    "\n",
     "\n",
     "cmap = cm.get_cmap(\"inferno\")\n",
     "distance_range = [0.0, 70.0]\n",
@@ -429,6 +428,7 @@
     "distance_estimator_all = DistanceEstimator()\n",
     "\n",
     "stft_matrix = np.empty((len(stft_list), len(mics), stft_list[0].shape[1]))\n",
+    "stft_matrix_calib = np.empty((len(stft_list), len(mics), stft_list[0].shape[1]))\n",
     "prob_matrix = np.empty((len(stft_list), len(mics), len(distances)))\n",
     "print(stft_matrix.shape, prob_matrix.shape)\n",
     "\n",
@@ -445,6 +445,7 @@
     "    distance_estimator = DistanceEstimator()\n",
     "\n",
     "    stft_matrix[i, :, :] = np.abs(stft[mics, :])\n",
+    "    stft_matrix_calib[i, :, :] = np.abs(stft[mics, :]) / calib_function_median(freqs)[mics]\n",
     "\n",
     "    for mic_i, mic_idx in enumerate(mics):\n",
     "        dist, proba, diff = inf_machine.do_inference(\"bayes\", mic_idx)\n",
@@ -486,7 +487,7 @@
     "        ax_slice[mic_i],\n",
     "        freqs[freqs > 0],\n",
     "        np.arange(len(stft_list)),\n",
-    "        stft_matrix[:, mic_i, freqs > 0],\n",
+    "        stft_matrix_calib[:, mic_i, freqs > 0],\n",
     "        n_xticks=3,\n",
     "        n_yticks=5,\n",
     "    )\n",
@@ -499,7 +500,7 @@
     "        n_xticks=3,\n",
     "        n_yticks=5,\n",
     "    )\n",
-    "\n",
+    "    \n",
     "dist, proba = distance_estimator_all.get_distance_distribution(\n",
     "    method=\"sum\",\n",
     "    distances_m=1e-2 * distances,\n",
@@ -545,6 +546,149 @@
     "save_fig(fig_slice, f\"{fname}_start{start_i}_n{n_sweeps}_{calib}_data.pdf\")\n",
     "save_fig(fig_prob, f\"{fname}_start{start_i}_n{n_sweeps}_{calib}_prob.pdf\")\n",
     "save_fig(fig_total, f\"{fname}_start{start_i}_n{n_sweeps}_{calib}_.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
+    "from plotting_tools import save_fig\n",
+    "\n",
+    "exp_name = \"2021_07_27_hover\"; \n",
+    "\n",
+    "#calib = \"stepper_nomotors\"\n",
+    "#calib = \"hover\"\n",
+    "calib = \"stepper\"\n",
+    "\n",
+    "calib_function_median = get_calib_function(calib)\n",
+    "\n",
+    "azimuth_deg = WALL_ANGLE_DEG\n",
+    "\n",
+    "results_df = pd.read_pickle(f\"../experiments/{exp_name}/all_data.pkl\")\n",
+    "mics = range(4)\n",
+    "distances = [30, 50]\n",
+    "\n",
+    "all_data = {d:None for d in distances}\n",
+    "\n",
+    "fig, ax_diff = plt.subplots() #1, len(mics))\n",
+    "fig.set_size_inches(3, 3)\n",
+    "ax_diff.set_title(f'average consecutive difference')\n",
+    "\n",
+    "fig, ax_var = plt.subplots() #1, len(mics))\n",
+    "fig.set_size_inches(3, 3)\n",
+    "ax_var.set_title(f'average standard deviation')\n",
+    "\n",
+    "fig, ax_diff_mic = plt.subplots(1, len(mics), sharey=True) \n",
+    "fig.set_size_inches(3 * len(mics), 3)\n",
+    "fig.suptitle(f'average consecutive difference')\n",
+    "fig, ax_var_mic = plt.subplots(1, len(mics), sharey=True) \n",
+    "fig.set_size_inches(3 * len(mics), 3)\n",
+    "fig.suptitle(f'average standard deviation')\n",
+    "for col, distance in enumerate(distances):\n",
+    "    row = results_df.loc[results_df.appendix == f\"_{distance}\", :].iloc[0]\n",
+    "\n",
+    "    pos_list = get_positions(row) \n",
+    "    valid = pos_list[:, 2] > 30\n",
+    "\n",
+    "    stft_list = row.stft[valid]\n",
+    "    freqs_list = row.frequencies_matrix[valid]\n",
+    "    pos_list = pos_list[valid, :]\n",
+    "    dist_average = np.mean([p[1] for p in pos_list])\n",
+    "\n",
+    "    dist_average = np.nanmedian([p[1] for p in pos_list])\n",
+    "\n",
+    "    stft_matrix_calib = np.empty((len(stft_list), len(mics), stft_list[0].shape[1]))\n",
+    "    for i, (stft, freqs, pos) in enumerate(zip(stft_list, freqs_list, pos_list)):\n",
+    "        stft_matrix_calib[i, :, :] = np.abs(stft[mics, :]) / calib_function_median(freqs)[mics]\n",
+    "    all_data[distance] = stft_matrix_calib\n",
+    "        \n",
+    "    consecutive_diff =  np.linalg.norm(\n",
+    "            stft_matrix_calib[1:, :, freqs > 0] - stft_matrix_calib[:-1, :, freqs>0], axis=2\n",
+    "    )\n",
+    "    var =  np.std(stft_matrix_calib[:, :, freqs > 0], axis=2)\n",
+    "    var_avg = np.mean(var, axis=1)\n",
+    "    diff_avg = np.mean(consecutive_diff, axis=1)\n",
+    "    ax_diff.plot(diff_avg, label=distance)\n",
+    "    ax_var.plot(var_avg, label=distance)\n",
+    "    \n",
+    "    # running mean\n",
+    "    n_mean = 5\n",
+    "    for i in range(var_avg.shape[0] - 1):\n",
+    "        ax_diff.scatter(i, np.mean(diff_avg[i:i+n_mean]), color=f'C{col}')\n",
+    "        ax_var.scatter(i, np.mean(var_avg[i:i+n_mean]), color=f'C{col}')\n",
+    "    ax_diff.legend(loc='lower left')\n",
+    "    ax_var.legend(loc='lower left')\n",
+    "    \n",
+    "    fig, ax_map = plt.subplots(1, len(mics), sharey=True) \n",
+    "    fig.set_size_inches(3 * len(mics), 3)\n",
+    "    \n",
+    "    for mic_i in range(len(mics)):\n",
+    "        pcolorfast_custom(\n",
+    "            ax_map[mic_i],\n",
+    "            np.arange(len(freqs[freqs > 0])),\n",
+    "            np.arange(len(stft_list)),\n",
+    "            stft_matrix_calib[:, mic_i, freqs > 0],\n",
+    "            n_xticks=3,\n",
+    "            n_yticks=5,\n",
+    "        )\n",
+    "        \n",
+    "        ax_diff_mic[mic_i].plot(consecutive_diff[:, mic_i], label=distance)\n",
+    "        ax_var_mic[mic_i].plot(var[:, mic_i], label=distance)\n",
+    "        #ax_diff_mic[mic_i].set_yscale('log')\n",
+    "        #ax_var_mic[mic_i].set_yscale('log')\n",
+    "    #ax_diff.set_yscale('log')\n",
+    "    #ax_var.set_yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_fingerprints(mat, method=None):\n",
+    "    \"\"\"\n",
+    "    mat is of shape n_sweeps x n_mics x n_freqs\n",
+    "    \"\"\"\n",
+    "    if method is None:\n",
+    "        return mat\n",
+    "    elif method == 'fft':\n",
+    "        return np.abs(np.fft.rfft(mat, axis=2))\n",
+    "    \n",
+    "method = 'fft'\n",
+    "#method = None\n",
+    "\n",
+    "sim = 'norm'\n",
+    "#sim = 'cosine'\n",
+    "\n",
+    "fingerprints = {\n",
+    "    d: np.mean(create_fingerprints(mat, method=method), axis=0) for d, mat in all_data.items()\n",
+    "}\n",
+    "\n",
+    "for distance, stft_matrix_calib in all_data.items():\n",
+    "    \n",
+    "    fig, axs = plt.subplots(1, len(mics), sharey=True)\n",
+    "    fig.set_size_inches(3*len(mics), 3)\n",
+    "    fig.suptitle(distance)\n",
+    "    \n",
+    "    online_fp = create_fingerprints(stft_matrix_calib, method=method)\n",
+    "    \n",
+    "    for i, mic_i in enumerate(mics):\n",
+    "        for d, fingerprint in fingerprints.items():\n",
+    "            if sim == 'norm':\n",
+    "                matches = np.linalg.norm(online_fp[:, mic_i, :] - fingerprint[None, mic_i, :], axis=-1)\n",
+    "                print(matches.shape)\n",
+    "            elif sim == 'cosine': \n",
+    "                matches = []\n",
+    "                for j in range(online_fp.shape[0]): \n",
+    "                    norm = np.linalg.norm(fingerprint[mic_i, :]) * np.linalg.norm(online_fp[j, mic_i, :])\n",
+    "                    matches.append(np.inner(online_fp[j, mic_i, :], fingerprint[mic_i, :]) / norm)\n",
+    "            axs[i].plot(matches, label=f'match with {d}')\n",
+    "        axs[i].legend()\n",
+    "        axs[i].set_xlabel('sweep index')"
    ]
   },
   {
@@ -595,10 +739,18 @@
     "from plotting_tools import add_colorbar\n",
     "from inference import Inference, eps_normalize\n",
     "from estimators import DistanceEstimator\n",
+    "from copy import deepcopy\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
-    "#mics = [0, 1, 2, 3] # for some reason this works super well for appendix _19!\n",
-    "mics = [0, 1, 3]\n",
+    "mics = [0, 1, 2, 3] # for some reason this works super well for appendix _19!\n",
+    "#mics = [0, 1, 3]\n",
+    "#mics = [0, 1] # ok\n",
+    "#mics = [0] # ok\n",
+    "#mics = [1] # ok\n",
+    "#mics = [2] # bad\n",
+    "#mics = [3] # bad\n",
+    "mic_idx = 0\n",
+    "plot_raw = True #False\n",
     "\n",
     "plot_step = 500\n",
     "\n",
@@ -635,10 +787,14 @@
     "    #{\"exp_name\": \"2021_07_27_manual\", \"motors\": \"all45000\", \"appendix\":\"_4\", \"end_distance\":15}\n",
     "]\n",
     "\n",
-    "fig_max, ax_max = plt.subplots()\n",
-    "fig_max.set_size_inches(2*FIGSIZE, FIGSIZE)\n",
+    "fig_max, ax_max = plt.subplots(1, len(mics), sharey=True, sharex=True)\n",
+    "fig_max.set_size_inches(3*FIGSIZE, FIGSIZE)\n",
+    "\n",
+    "fig_max_tot, ax_max_tot = plt.subplots()\n",
+    "fig_max.set_size_inches(3*FIGSIZE, FIGSIZE)\n",
     "\n",
     "for params in plot_dict:\n",
+    "    \n",
     "    exp_name, motors, appendix, end_distance = params.values()\n",
     "    plot_name = f\"plots/experiments/{exp_name}{appendix}_motors{motors}\"\n",
     "\n",
@@ -649,9 +805,9 @@
     "    positions_cm = get_positions(row, end_distance=end_distance, use_landing=False)\n",
     "    \n",
     "    distances = positions_cm[:, 1]\n",
-    "    forward_indices = np.where(distances[1:] - distances[:-1] <= 0)[0] - 1\n",
-    "    \n",
-    "    print(\"all:\", len(forward_indices))\n",
+    "    print(\"all\", len(distances))\n",
+    "    forward_indices = np.where(distances[1:] - distances[:-1] <= 0)[0] + 1\n",
+    "    print(\"forward:\", len(forward_indices))\n",
     "    forward_indices = forward_indices[positions_cm[forward_indices, 2] > 30]\n",
     "    print(\"flying:\", len(forward_indices))\n",
     "    \n",
@@ -666,7 +822,7 @@
     "\n",
     "    freqs = row.frequencies_matrix[0, :]\n",
     "\n",
-    "    xvalues = distances; xlabel=\"distance [cm]\"\n",
+    "    xvalues = deepcopy(distances); xlabel=\"distance [cm]\"\n",
     "    #xvalues = row.seconds[chosen_sweeps]; xlabel=\"seconds [s]\"\n",
     "\n",
     "    yvalues = freqs[freqs>0]\n",
@@ -674,30 +830,52 @@
     "\n",
     "    sort_idx = np.argsort(xvalues)\n",
     "    xvalues = xvalues[sort_idx]\n",
-    "    values = values[sort_idx, ...]\n",
+    "    values_sorted = values[sort_idx, ...]\n",
     "\n",
     "    ######## Plot raw\n",
     "    calib_function = get_calib_function(calib_method)\n",
     "    calib_values = calib_function(yvalues)\n",
+    "    \n",
     "    values /= calib_values\n",
-    "\n",
-    "    mic_idx = 0\n",
+    "    values_sorted /= calib_values\n",
+    "    # attempt to do cepstrum\n",
+    "    #values = np.log10(values)\n",
+    "    #values_sorted = np.log10(values_sorted)\n",
+    "    \n",
+    "    \n",
+    "    # detect bumping in wall\n",
+    "    means = np.mean(np.mean(values_sorted, axis=-1), axis=-1)\n",
+    "    plt.figure()\n",
+    "    plt.plot(xvalues, means)\n",
+    "    outliers = np.abs(means - np.mean(means)) >= np.std(means)\n",
+    "    \n",
+    "    values_sorted = values_sorted[~outliers]\n",
+    "    values = values[~outliers]\n",
+    "    xvalues = xvalues[~outliers]\n",
+    "    \n",
+    "    edm = np.linalg.norm(values_sorted[None, :, :, :] - \n",
+    "                         values_sorted[:, None, :, :], ord=1, axis=3) # dists, freqs, mic_idx\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(2*FIGSIZE, 2*FIGSIZE)\n",
+    "    #ax.matshow(np.log10(edm[:, :, mic_idx]))\n",
+    "    pcolorfast_custom(ax, xvalues, xvalues, np.log10(edm[:, :, mic_idx]))\n",
+    "    \n",
     "    yticks = np.arange(min(yvalues)//plot_step*plot_step, max(yvalues)//plot_step*plot_step+2*plot_step, \n",
     "                       step=plot_step)\n",
     "\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(2*FIGSIZE, FIGSIZE)\n",
-    "    pcolorfast_custom(ax, np.arange(len(xvalues)), yvalues, values[:, mic_idx, :].T)\n",
+    "    pcolorfast_custom(ax, np.arange(len(xvalues)), yvalues, values_sorted[:, mic_idx, :].T)\n",
     "    ax.set_title('calibrated')\n",
     "    ax.set_xticklabels(np.round(xvalues, 1), rotation=90)\n",
     "    ax.set_yticks(yticks)\n",
     "    ax.set_yticklabels(yticks)\n",
     "    ax.set_ylabel(\"frequency [Hz]\")\n",
     "    ax.set_xlabel(xlabel)\n",
-    "\n",
+    "    \n",
     "    ######## Plot theory\n",
     "    yvalues_theo = np.linspace(min(yvalues), max(yvalues), len(yvalues))\n",
-    "    values_theo = get_df_theory(yvalues_theo, np.sort(distances))\n",
+    "    values_theo = get_df_theory(yvalues_theo, xvalues)\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(2*FIGSIZE, FIGSIZE)\n",
@@ -708,6 +886,27 @@
     "    ax.set_yticklabels(yticks)\n",
     "    ax.set_ylabel(\"frequency [Hz]\")\n",
     "    ax.set_xlabel(xlabel)\n",
+    "    \n",
+    "    if plot_raw:\n",
+    "        fig, axs = plt.subplots(values.shape[0], len(mics), sharex=True, sharey=True)\n",
+    "        fig.set_size_inches(15, 2*values.shape[0])\n",
+    "        for i, mic_idx in enumerate(mics):\n",
+    "            axs[0, i].set_title(mic_idx)\n",
+    "            for j in range(values.shape[0]):\n",
+    "                #axs[j].plot(yvalues, values[j, mic_idx, :], color='black', label=round(distances[j], 2))\n",
+    "                axs[j, i].plot(yvalues, values_sorted[j, mic_idx, :], color='black', label=round(xvalues[j], 2))\n",
+    "                \n",
+    "                \n",
+    "                values_theo_norm = deepcopy(values_theo[mic_idx, :, j])\n",
+    "                values_theo_norm -= np.min(values_theo_norm)\n",
+    "                values_theo_norm /= np.max(values_theo_norm)\n",
+    "                target_max = np.max(values_sorted[j, mic_idx, :])\n",
+    "                target_min = np.min(values_sorted[j, mic_idx, :])\n",
+    "                values_theo_norm *= (target_max - target_min)\n",
+    "                values_theo_norm += target_min\n",
+    "                axs[j, i].plot(yvalues_theo, values_theo_norm, color='green')\n",
+    "                axs[j, i].legend(loc='upper left')\n",
+    "\n",
     "\n",
     "    ######## Do inference\n",
     "    dists = distance_estimator.DISTANCES_M * 1e2\n",
@@ -716,10 +915,10 @@
     "    \n",
     "    results_matrix = np.empty((values.shape[0], len(dists)))\n",
     "    #fig, axs = plt.subplots(1, 2)\n",
-    "    for i in range(values.shape[0]):\n",
+    "    for i in range(values_sorted.shape[0]):\n",
     "        distance_estimator = DistanceEstimator()\n",
     "        #inf_machine.add_data(values_theo[:, :, i], yvalues_theo)\n",
-    "        inf_machine.add_data(values[i], yvalues)\n",
+    "        inf_machine.add_data(values_sorted[i], yvalues)\n",
     "        #axs[0].plot(yvalues_theo, values_theo[0, :, i])\n",
     "\n",
     "        inf_machine.add_geometry([0, 80], WALL_ANGLE_DEG)\n",
@@ -729,7 +928,8 @@
     "            #axs[1].plot(dist, prob_mic)\n",
     "\n",
     "        d, prob = distance_estimator.get_distance_distribution(distances_m = dists * 1e-2, verbose=False,\n",
-    "                                                               azimuth_deg=azimuth_deg)#)\n",
+    "                                                               azimuth_deg=azimuth_deg, \n",
+    "                                                               method=\"product\")\n",
     "        results_matrix[i, :] = prob #eps_normalize(prob, eps=1e-50)\n",
     "\n",
     "    fig, ax = plt.subplots()\n",
@@ -750,11 +950,26 @@
     "    ax.legend()\n",
     "    save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
     "\n",
-    "    maxs = np.sum(np.sum(values, axis=-1), axis=-1)\n",
-    "    #maxs = np.max(results_matrix, axis=1)\n",
-    "    ax_max.plot(xvalues, maxs, label=plot_name)\n",
+    "    label = appendix.replace('_', '') + ' est'\n",
+    "    for mic_i, mic_idx in enumerate(mics):\n",
+    "        var = np.var(values_sorted[:, mic_i, :], axis=-1)\n",
+    "        ax_max[mic_i].semilogy(xvalues, var, label=label)\n",
+    "    \n",
+    "    consecutive_diff = np.mean(\n",
+    "        np.linalg.norm(\n",
+    "            values_sorted[1:, mics, :] - values_sorted[:-1, mics, :], axis=2\n",
+    "        ) ,axis=1\n",
+    "    )\n",
+    "    ax_max_tot.plot(xvalues[1:], consecutive_diff, label=label)\n",
+    "    \n",
+    "    #var = np.sum(np.var(values_sorted[:, mics, :], axis=2), axis=1)\n",
+    "    #ax_max_tot.plot(xvalues, var, label=label)\n",
+    "    \n",
+    "    #var_theo = np.sum(np.var(values_theo, axis=1), axis=0)\n",
+    "    #ax_max.semilogy(xvalues, var_theo, label=appendix.replace('_', '') + ' gt')\n",
     "#ax_max.set_xticklabels(np.round(xvalues, 1), rotation=90)\n",
-    "ax_max.legend()"
+    "ax_max[-1].legend()\n",
+    "ax_max_tot.legend()"
    ]
   },
   {
