Add polar measurement plots

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -68,7 +68,7 @@
     "ax.add_artist(l1)\n",
     "ax.set_xlabel(\"x [m]\")\n",
     "ax.set_ylabel(\"y [m]\")\n",
-    "save_fig(fig, f'{plot_dir}/setup_{PLATFORM}.pdf')"
+    "#save_fig(fig, f'{plot_dir}/setup_{PLATFORM}.pdf')"
    ]
   },
   {
