--- a/python/PolarMeasurement.ipynb
+++ b/python/PolarMeasurement.ipynb
@@ -26,6 +26,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Static"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -35,18 +42,27 @@
     "\n",
     "exp_name = '2021_09_23_polar_measurement'\n",
     "\n",
-    "all_df = parse_experiments(exp_name, verbose=False)\n",
-    "all_df"
+    "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
+    "try:\n",
+    "    all_df = pd.read_pickle(fname)\n",
+    "    print('read', fname)\n",
+    "except:\n",
+    "    all_df = parse_experiments(exp_name, verbose=False)\n",
+    "    all_df.to_pickle(fname)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "plot_spec = True\n",
-    "mic_idx = 1 # facing speaker\n",
+    "amplitude_method = \"fixed\" # window of 3 around source frequency\n",
+    "#amplitude_method = \"maximum\" \n",
+    "mic_idx = 0 # facing speaker\n",
+    "#mic_idx = 1 # facing speaker\n",
     "#mic_idx = 3 # away from speaker\n",
     "\n",
     "for motors, df_motor in all_df.groupby('motors'):\n",
@@ -54,6 +70,8 @@
     "    for source, df in df_motor.groupby('source'):\n",
     "        angles = []\n",
     "        amplitudes = []\n",
+    "        \n",
+    "        freq = int(source.replace(\"mono\", \"\"))\n",
     "\n",
     "        for angle, df_angle in df.groupby('degree'):\n",
     "            row = df_angle.iloc[0]\n",
@@ -66,25 +84,159 @@
     "\n",
     "            energy = np.sum(spectrogram, axis=0)\n",
     "            max_energy = np.max(energy)\n",
-    "            start = np.where(energy > 0.1 * max_energy)[0][0]\n",
-    "            cutoff = np.where(energy < 0.1 * max_energy)[0]\n",
-    "            cutoff = cutoff[cutoff > start][0]\n",
+    "            #start = np.where(energy > 0.1 * max_energy)[0][0]\n",
+    "            start = 3\n",
+    "            #cutoff = np.where(energy < 0.1 * max_energy)[0]\n",
+    "            cutoff = 23 #len(energy) - 1\n",
+    "            #cutoff = cutoff[cutoff > start][0]\n",
     "            \n",
-    "            if plot_spec:\n",
-    "                fig, ax_spec = plt.subplots()\n",
-    "                ax_spec.pcolorfast(row.seconds, freqs, spectrogram[:-1, :-1])\n",
-    "                ax_spec.set_title(f'angle {angle}, source {source}')\n",
-    "                ax_spec.axvline(row.seconds[start], color='white')\n",
-    "                ax_spec.axvline(row.seconds[cutoff], color='white')\n",
-    "            \n",
-    "            amplitude = np.mean(np.max(spectrogram[:, start:cutoff], axis=0))\n",
+    "            if amplitude_method == \"maximum\":\n",
+    "                amplitude = np.mean(np.max(spectrogram[:, start:cutoff], axis=0))\n",
+    "            elif amplitude_method == \"fixed\":\n",
+    "                freq_idx = np.argmin(np.abs(freqs - freq))\n",
+    "                amplitude = np.mean(spectrogram[freq_idx-1:freq_idx:2, start:cutoff].flatten())\n",
     "            amplitudes.append(amplitude)\n",
     "            \n",
     "        ax.plot(angles, amplitudes, label=source)\n",
     "    ax.set_xlabel('angle [deg]')\n",
+    "    ax.set_ylim(0.1, 10)\n",
     "    ax.set_ylabel('average maximum amplitude')\n",
-    "    ax.legend(title='source', loc='upper right')\n",
-    "    ax.set_title(f'motors {motors}')"
+    "    ax.legend(title='source', loc='upper left', bbox_to_anchor=[1, 1])\n",
+    "    ax.set_title(f'motors {motors}')\n",
+    "    ax.set_yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "mic_idx = 0 # facing speaker\n",
+    "#mic_idx = 1 # facing speaker\n",
+    "#mic_idx = 3 # away from speaker\n",
+    "\n",
+    "for motors, df_motor in all_df.groupby('motors'):\n",
+    "    for source, df in df_motor.groupby('source'):\n",
+    "        freq = int(source.replace(\"mono\", \"\"))\n",
+    "        \n",
+    "        fig, ax_specs = plt.subplots(1, len(df.degree.unique()), sharey=True)\n",
+    "        fig.suptitle(f'source {source}, motors {motors}')\n",
+    "        fig.set_size_inches(15, 5)\n",
+    "        i_angle = 0\n",
+    "        for angle, df_angle in df.groupby('degree'):\n",
+    "            row = df_angle.iloc[0]\n",
+    "\n",
+    "            stft = np.abs(row.stft) # times x n_mics x n_mics\n",
+    "            spectrogram = stft[:, mic_idx, :].T # freqs x times\n",
+    "            freqs = row.frequencies_matrix[0, :]\n",
+    "            invalid = np.where(row.frequencies_matrix[[0], :]!=freqs[None, :])[0]\n",
+    "            if len(invalid) > 0:\n",
+    "                print('invalid times:', invalid)\n",
+    "\n",
+    "            energy = np.sum(spectrogram, axis=0)\n",
+    "            max_energy = np.max(energy)\n",
+    "            #start = np.where(energy > 0.1 * max_energy)[0][0]\n",
+    "            start = 3\n",
+    "            #cutoff = np.where(energy < 0.1 * max_energy)[0]\n",
+    "            cutoff = 23 #len(energy) - 1\n",
+    "            #cutoff = cutoff[cutoff > start][0]\n",
+    "            \n",
+    "            ax_specs[i_angle].pcolorfast(row.seconds, freqs, spectrogram[:-1, :-1])\n",
+    "            ax_specs[i_angle].set_title(f'{angle}')\n",
+    "            ax_specs[i_angle].axvline(row.seconds[start], color='white')\n",
+    "            ax_specs[i_angle].axvline(row.seconds[cutoff], color='white')\n",
+    "            i_angle += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Moving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wall_analysis import parse_experiments\n",
+    "\n",
+    "exp_name = '2021_09_30_polar_measurement'\n",
+    "\n",
+    "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
+    "try:\n",
+    "    raise\n",
+    "    all_df = pd.read_pickle(fname)\n",
+    "    print('read', fname)\n",
+    "except:\n",
+    "    all_df = parse_experiments(exp_name, verbose=False)\n",
+    "    all_df.to_pickle(fname)\n",
+    "all_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "mic_idx = 3\n",
+    "vmax = 10\n",
+    "w = 5\n",
+    "\n",
+    "chosen_df = all_df.loc[\n",
+    "    (all_df.appendix == '_loud') & \n",
+    "    (all_df.source == 'mono3000') &\n",
+    "    (all_df.motors == 0)\n",
+    "]\n",
+    "\n",
+    "for (motors, source, appendix), df in chosen_df.groupby(['motors', 'source', 'appendix']):\n",
+    "    assert len(df) == 1\n",
+    "    row = df.iloc[0]\n",
+    "\n",
+    "    freq = int(row.source.strip(\"mono\"))\n",
+    "\n",
+    "    spectrogram = np.abs(row.stft[:, mic_idx, :].T)\n",
+    "    freqs = row.frequencies_matrix[-1, :]\n",
+    "    freq_idx = np.argmin(np.abs(freqs - freq))\n",
+    "    \n",
+    "    #amplitudes = spectrogram[freq_idx, :]\n",
+    "    amplitudes = np.max(spectrogram, axis=0)\n",
+    "    \n",
+    "    times = row.seconds\n",
+    "    angles = row.positions[:, 3] #np.cumsum(row.positions[:, 3]) * np.r_[0, times[1:] - times[:-1]] * 180 / np.pi\n",
+    "\n",
+    "    #fig, ax = plt.subplots()\n",
+    "    #ax.plot(times, angles)\n",
+    "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(5, 3)\n",
+    "    ax.pcolorfast(times[:20], freqs, np.log10(spectrogram[:-1, :19]), vmax=np.log10(vmax))\n",
+    "\n",
+    "    fig, axs = plt.subplots(1, 3)\n",
+    "    fig.set_size_inches(15, 3)\n",
+    "    axs[0].pcolorfast(times, freqs, np.log10(spectrogram[:-1, :-1]), vmax=np.log10(vmax))\n",
+    "    title = source\n",
+    "    title += ', no motors, ' if motors == 0 else ', motors, '\n",
+    "    title += appendix.strip(\"_\")\n",
+    "    axs[0].set_title(title)\n",
+    "    axs[1].set_title(f'amplitude at {freqs[freq_idx]:.0f} Hz')\n",
+    "    axs[1].scatter(times, amplitudes)\n",
+    "    \n",
+    "    amplitudes_sum = np.mean(spectrogram[freq_idx-w:freq_idx+w, :], axis=0)\n",
+    "    axs[0].axhline(freqs[freq_idx-w], color='white')\n",
+    "    axs[0].axhline(freqs[freq_idx+w], color='white')\n",
+    "    axs[0].set_title(title)\n",
+    "    axs[2].set_title(f'mean amplitudes in {freqs[freq_idx-w]:.0f}:{freqs[freq_idx+w]:.0f} Hz')\n",
+    "    axs[2].scatter(times, amplitudes_sum)\n",
+    "    #axs[1].set_yscale('log')\n",
+    "    #axs[1].set_ylim(0, vmax)"
    ]
   },
   {
