Evaluate new datasets

--- a/python/PolarMeasurement.ipynb
+++ b/python/PolarMeasurement.ipynb
@@ -166,11 +166,11 @@
    "source": [
     "from wall_analysis import parse_experiments\n",
     "\n",
-    "exp_name = '2021_09_30_polar_measurement'\n",
+    "#exp_name = '2021_09_30_polar_measurement'\n",
+    "exp_name = '2021_10_05_polar_measurement'\n",
     "\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
     "try:\n",
-    "    raise\n",
     "    all_df = pd.read_pickle(fname)\n",
     "    print('read', fname)\n",
     "except:\n",
@@ -187,56 +187,57 @@
    },
    "outputs": [],
    "source": [
-    "mic_idx = 3\n",
+    "mic_idx = 1\n",
     "vmax = 10\n",
     "w = 5\n",
+    "time_max = 22\n",
     "\n",
     "chosen_df = all_df.loc[\n",
-    "    (all_df.appendix == '_loud') & \n",
-    "    (all_df.source == 'mono3000') &\n",
-    "    (all_df.motors == 0)\n",
+    "    (all_df.appendix == '') #& \n",
+    "    #(all_df.source == 'mono3000') &\n",
+    "    #(all_df.motors == 0)\n",
     "]\n",
     "\n",
-    "for (motors, source, appendix), df in chosen_df.groupby(['motors', 'source', 'appendix']):\n",
-    "    assert len(df) == 1\n",
-    "    row = df.iloc[0]\n",
-    "\n",
-    "    freq = int(row.source.strip(\"mono\"))\n",
-    "\n",
-    "    spectrogram = np.abs(row.stft[:, mic_idx, :].T)\n",
-    "    freqs = row.frequencies_matrix[-1, :]\n",
-    "    freq_idx = np.argmin(np.abs(freqs - freq))\n",
+    "for (motors, appendix), df in chosen_df.groupby(['motors', 'appendix']):\n",
     "    \n",
-    "    #amplitudes = spectrogram[freq_idx, :]\n",
-    "    amplitudes = np.max(spectrogram, axis=0)\n",
-    "    \n",
-    "    times = row.seconds\n",
-    "    angles = row.positions[:, 3] #np.cumsum(row.positions[:, 3]) * np.r_[0, times[1:] - times[:-1]] * 180 / np.pi\n",
-    "\n",
-    "    #fig, ax = plt.subplots()\n",
-    "    #ax.plot(times, angles)\n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(5, 3)\n",
-    "    ax.pcolorfast(times[:20], freqs, np.log10(spectrogram[:-1, :19]), vmax=np.log10(vmax))\n",
-    "\n",
-    "    fig, axs = plt.subplots(1, 3)\n",
-    "    fig.set_size_inches(15, 3)\n",
-    "    axs[0].pcolorfast(times, freqs, np.log10(spectrogram[:-1, :-1]), vmax=np.log10(vmax))\n",
-    "    title = source\n",
-    "    title += ', no motors, ' if motors == 0 else ', motors, '\n",
-    "    title += appendix.strip(\"_\")\n",
-    "    axs[0].set_title(title)\n",
-    "    axs[1].set_title(f'amplitude at {freqs[freq_idx]:.0f} Hz')\n",
-    "    axs[1].scatter(times, amplitudes)\n",
     "    \n",
-    "    amplitudes_sum = np.mean(spectrogram[freq_idx-w:freq_idx+w, :], axis=0)\n",
-    "    axs[0].axhline(freqs[freq_idx-w], color='white')\n",
-    "    axs[0].axhline(freqs[freq_idx+w], color='white')\n",
-    "    axs[0].set_title(title)\n",
-    "    axs[2].set_title(f'mean amplitudes in {freqs[freq_idx-w]:.0f}:{freqs[freq_idx+w]:.0f} Hz')\n",
-    "    axs[2].scatter(times, amplitudes_sum)\n",
-    "    #axs[1].set_yscale('log')\n",
-    "    #axs[1].set_ylim(0, vmax)"
+    "    fig_pol, ax_pol = plt.subplots(subplot_kw={'projection':'polar'})\n",
+    "    for source, df_source in df.groupby('source'):\n",
+    "        assert len(df_source) == 1\n",
+    "        row = df_source.iloc[0]\n",
+    "\n",
+    "        times = row.seconds\n",
+    "        angles = row.positions[:, 3] #np.cumsum(row.positions[:, 3]) * np.r_[0, times[1:] - times[:-1]] * 180 / np.pi\n",
+    "        freq = int(row.source.strip(\"mono\"))\n",
+    "        freqs = row.frequencies_matrix[-1, :]\n",
+    "        freq_idx = np.argmin(np.abs(freqs - freq))\n",
+    "\n",
+    "        spectrogram = np.abs(row.stft[:, mic_idx, :].T)\n",
+    "        #amplitudes = spectrogram[freq_idx, :]\n",
+    "        amplitudes = np.max(spectrogram, axis=0)\n",
+    "        \n",
+    "        fig_spec, ax_spec = plt.subplots()\n",
+    "        im = ax_spec.pcolorfast(times, freqs, np.log10(spectrogram[:-1, :-1]), vmax=np.log10(vmax), vmin=-3)\n",
+    "        #plt.colorbar(ax=ax_spec, im=im)\n",
+    "\n",
+    "        ax.plot(times, amplitudes, label=source)\n",
+    "        ax.axvline(time_max, color='black')\n",
+    "        \n",
+    "        time_idx = np.where(times < time_max)[0][-1]\n",
+    "        amps = 20*np.log10(amplitudes[2:time_idx])\n",
+    "        amps -= amps[0]\n",
+    "        angles = np.linspace(0, 2*np.pi, len(amps))\n",
+    "        \n",
+    "        ax_pol.plot(angles, amps, label=source)\n",
+    "        ax_pol.set_theta_zero_location(\"N\")\n",
+    "        \n",
+    "    ax.legend(bbox_to_anchor=[1, 1], loc='upper left')\n",
+    "        \n",
+    "    title = 'no motors, ' if motors == 0 else ', motors, '\n",
+    "    title += appendix.strip(\"_\")\n",
+    "    ax_pol.set_title(title)\n",
+    "    ax_pol.legend(bbox_to_anchor=[1, 1], loc='upper left')"
    ]
   },
   {
